--- a/gridstyle.css
+++ b/gridstyle.css
@@ -42,13 +42,15 @@
     border-left: 2px solid #a2c0c9;
 }
 
+
+
 .card__content {
     line-height: 1.5;
     font-size: 0.9em;
     padding: 15px;
     background: #fafafa;
     border-right: 2px solid #a2c0c9;;
-    border-left: 2px solid #a2c0c9;;
+    border-left: 2px solid #a2c0c9;; 
 }
 
 .card__content > p:first-of-type {
@@ -88,4 +90,9 @@
 
 .card{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.topic-header{
+    text-align: center;
+    font-size: 3vh;
 }
